[gd_scene load_steps=9 format=3 uid="uid://nudnppxvjx2y"]

[ext_resource type="Texture2D" uid="uid://c75jrp57x4wfs" path="res://icon.svg" id="1_ixued"]
[ext_resource type="Texture2D" uid="uid://cdrjgn8t2i0m2" path="res://Assets/Art/Background/OlindaEscarlate.png" id="1_ja4eh"]
[ext_resource type="PackedScene" uid="uid://d173poj0gsaby" path="res://Assets/Prefabs/Characters/player.tscn" id="2_l5p8d"]
[ext_resource type="Texture2D" uid="uid://bvjt68utvff7x" path="res://Assets/Art/Foreground/FrontRed.png" id="2_u10tq"]
[ext_resource type="Script" uid="uid://bhoc7tuwxmfkb" path="res://Assets/Scripts/teste_musica.gd" id="3_ja4eh"]
[ext_resource type="AudioStream" uid="uid://deiqk02nvi0i8" path="res://Assets/Art/Sounds/Samba Playback (100 bpm) _ Surdo  Pandeiro  Tamborim (clave 1).mp3" id="4_u10tq"]
[ext_resource type="PackedScene" path="res://Assets/Scenes/Score.tscn" id="5_rivo0"]
[ext_resource type="Script" path="res://Assets/Scripts/NoteSpawner.gd" id="6_l5p8d"]

[node name="PlayerTest" type="Node2D"]

[node name="Background" type="Parallax2D" parent="."]
z_index = -10
scroll_offset = Vector2(0, -72)
repeat_size = Vector2(2400, 0)
autoscroll = Vector2(50, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture_repeat = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ja4eh")

[node name="Foreground" type="Parallax2D" parent="."]
z_index = 10
scroll_offset = Vector2(0, -72)
repeat_size = Vector2(2400, 0)
autoscroll = Vector2(200, 0)

[node name="Sprite2D" type="Sprite2D" parent="Foreground"]
texture_repeat = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_u10tq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -216.0
offset_top = -264.0
offset_right = -176.0
offset_bottom = -224.0
scale = Vector2(1, 13.2)

[node name="Lines" type="Node2D" parent="."]
position = Vector2(-184, 0)

[node name="Sprite2D3" type="Sprite2D" parent="Lines"]
position = Vector2(832, 192)
scale = Vector2(15, 0.1)
texture = ExtResource("1_ixued")

[node name="Sprite2D" type="Sprite2D" parent="Lines"]
position = Vector2(832, 0)
scale = Vector2(15, 0.1)
texture = ExtResource("1_ixued")

[node name="Sprite2D2" type="Sprite2D" parent="Lines"]
position = Vector2(832, -192)
scale = Vector2(15, 0.1)
texture = ExtResource("1_ixued")

[node name="Player" parent="." instance=ExtResource("2_l5p8d")]
position = Vector2(-192, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(264, 0)

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("3_ja4eh")
level_music = ExtResource("4_u10tq")
bpm = 100

[node name="Score" parent="." instance=ExtResource("5_rivo0")]

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("6_l5p8d")

[node name="Spawn_Line_2" type="Marker2D" parent="Spawner"]
position = Vector2(840, -192)
scale = Vector2(1, 13.2)

[node name="Spawn_Line_1" type="Marker2D" parent="Spawner"]
position = Vector2(840, 0)
scale = Vector2(1, 13.2)

[node name="Spawn_Line_0" type="Marker2D" parent="Spawner"]
position = Vector2(840, 192)
scale = Vector2(1, 13.2)

[node name="End_Line_2" type="Marker2D" parent="Spawner"]
position = Vector2(-198, -192)
scale = Vector2(1, 13.2)

[node name="End_Line_1" type="Marker2D" parent="Spawner"]
position = Vector2(-198, 0)
scale = Vector2(1, 13.2)

[node name="End_Line_0" type="Marker2D" parent="Spawner"]
position = Vector2(-198, 192)
scale = Vector2(1, 13.2)
